[tool.poetry]
name = "superset-elasticsearch-engine-spec"
version = "0.1.0"
description = ""
authors = ["aniaan <fjn.aniaan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
